# rsxiv

./: CHANGELOG.md  Cargo.toml  README.md
benches/: id.rs
examples/: README.md  ureq.rs
scripts/: generate_test_xml.sh
src/: api.rs  de.rs  id.rs  lib.rs  query.rs  response.rs  xml.rs
src/api/: search.rs  tests.rs
src/de/: de_impl.rs  tests.rs
src/id/: archive.rs  find.rs  new.rs  old.rs  parse.rs  tests.rs
src/id/old/: archive.rs
src/id/parse/: tests.rs
src/query/: field.rs  search.rs  tests.rs
src/response/: tests.rs  xml.rs
src/response/tests/: query.xml  query_doc.txt  query_doc_long.txt  query_empty.xml  query_missing_id.xml
