[package]
name = "rsxiv"
description = "Tools for working with arXiv and the arXiv API"
readme = "README.md"
version = "0.1.0"
edition = "2024"
authors = ["Alex Rutar <alex@rutar.org>"]
keywords = ["arxiv", "serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/autobib/rsxiv"
categories = ["text-processing", "api-bindings"]

[features]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.38", features = ["serialize"] }
url = "2.5.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "id"
harness = false
