[package]
name = "rsxiv"
description = "Tools for working with arXiv and the arXiv API"
readme = "README.md"
version = "0.2.0"
edition = "2024"
authors = ["Alex Rutar <alex@rutar.org>"]
keywords = ["arxiv", "serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/autobib/rsxiv"
categories = ["text-processing", "api-bindings"]

[features]
serde = ["dep:serde", "chrono/serde", "quick-xml/serialize"]

[dependencies]
chrono = { version = "0.4" }
quick-xml = { version = "0.38" }
url = "2.5.4"
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
ureq = "3.1"
anyhow = "1.0"

[[example]]
name = "ureq"
required-features = ["serde"]

[[bench]]
name = "id"
harness = false
