[package]
name = "rsxiv"
description = "Tools for working with arXiv and the arXiv API"
readme = "README.md"
version = "0.4.2"
edition = "2024"
authors = ["Alex Rutar <alex@rutar.org>"]
keywords = ["arxiv", "serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/autobib/rsxiv"
categories = ["text-processing", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chrono = "0.4"
quick-xml = "0.38"
url = "2.5.4"
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ureq = "3.1"
anyhow = "1.0"

[[example]]
name = "ureq"
required-features = ["serde"]

[[bench]]
name = "id"
harness = false
